Fixes to background image
Turns out that the background image was cut off in certain
circumstances. This solution seems more robust and is based on stuff
from http://css-tricks.com/perfect-full-page-background-image/.

--- a/offcanvas.css
+++ b/offcanvas.css
@@ -41,12 +41,15 @@ body {
 .col-6{background-color:#eee;border-radius:4px}
 body {
   background: 
-  /* color overlay */ 
-    /* image to overlay */
     url(http://images.cdn.fotopedia.com/_avPIZmqM3w-7z161LH_268-hd.jpg)
+    no-repeat
     center
-    no-repeat;
-  background-size: cover;
+    center
+    fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
